# tuim

./: .gitignore  Cargo.toml  README.md  TODO.md
.github/workflows/: release.yml
src/: lib.rs  log.rs  main.rs
src/app/: actions.rs  events.rs  input.rs  mod.rs  runtime.rs
src/cache/: keys.rs  memory.rs  mod.rs  paths.rs
src/config/: keybinds.rs  mod.rs  paths.rs  settings.rs
src/engine/: covers.rs  events.rs  lyrics.rs  mod.rs  playback.rs  queue.rs  search.rs
src/media/: downloads.rs  lyrics.rs  mod.rs  playback.rs
src/models/: album.rs  artist.rs  track.rs
src/player/: error.rs  mod.rs  mpv.rs  traits.rs
src/providers/: mod.rs  provider.rs
src/providers/monochrome/: client.rs  deezer.rs  details.rs  discovery.rs  mod.rs  models.rs  playback.rs  search.rs
src/services/: downloads.rs  image.rs  library.rs  lyrics.rs  mod.rs
src/state/: app.rs  cover.rs  library.rs  lyrics.rs  mod.rs  player.rs  queue.rs  search.rs  settings.rs  status.rs  theme.rs  view.rs  visualizer.rs
src/theme/: loader.rs  mod.rs  palette.rs
src/ui/: layout.rs  mod.rs
src/ui/image/: mod.rs
src/ui/panes/: album.rs  artist.rs  help.rs  lyrics.rs  mod.rs  now_playing.rs  queue.rs  search.rs
src/ui/widgets/: entity_preview.rs  footer.rs  mod.rs  progress.rs  status_bar.rs  transport.rs  visualizer.rs
src/visualizer/: cava.rs  mod.rs
tests/: api.rs  cache.rs  engine.rs  models.rs  player.rs  providers.rs  queue.rs  search.rs  state.rs
