[package]
name = "tuim"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
crossterm = "0.28"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
